# hacks-alignment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deepspeed_stage2.json  docker-compose.yml  mypy.ini  openapi.yaml  pyproject.toml  readme.md  requirements.txt  ruff.toml  train_wrapper.py
app/: jsonformer_vllm.py  schemas.py  server.py
bot/: config.py  constants.py  logger.py  server.py
bot/services/: __init__.py
bot/services/assist/: handlers.py  phrases.py  states.py
deploy/: deploy.yml  destroy.yml  prod.ini  restart.yml  test.ini
deploy/templates/: clean.sh  destroy.sh  restart.sh  run.sh
docker/app/: Dockerfile
docker/bot/: Dockerfile
prompts/: answers_lora.json  answers_lora_with_jsonformer.json  base_with_jsonformer.json  evaluate.json  lora_with_jsonformer_with_prompt_1.json  sft_with_jsonformer.json  sft_with_jsonformer_with_prompt_1.json  train_results.jsonl
training/: adapter_push.py  create_datasets.py  dataset_fix.py  run.py  sft.json  sft.py  sft_p_tuning.json  test_results.jsonl  train_results.jsonl
training/configs/: lora.json  sft.json
