[tool.poetry]
name = "hacks-alignment"
version = "0.0.1"
description = "Project solution for https://hacks-ai.ru/events/1077378"
authors = [
    "Matvey Saprykin <matvey.saprykin@mail.ru>",
    "Kirill Khvoshchev <KhvoshchevKMwork@yandex.ru>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
litserve = "^0.2.2"
requests = "^2.32.3"
pre-commit = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.4"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
